# typed-dag

./: LICENSE  README.md  Test.hs  Test2.hs  dag.cabal  g.hs  ideas.txt  notes.txt  purity.cabal
repo/change/: default  default.output
repo/getLine/: inputs.output
src/Control/: Dag.hs  Purity.hs
src/Control/Dag/: Algorithm.hs  Build.hs  Commit.hs  Evented.hs  Index.hs  Play.hs  Prelude.hs  Runners.hs  Types.hs  Utils.hs
src/Control/Dag/Backends/: GitCmd.hs
src/Control/Dag/Node/: ContNode.hs  EmitterNode.hs  GitNode.hs  JobNode.hs  JunctionNode.hs  LensNode.hs  OutputProxyNode.hs  PullNode.hs  StateNode.hs
src/Control/Dag/Test/: Inputs.hs
src/Control/Dag/Types/: Node.hs  Pull.hs  Pull2.hs
src/Control/Purity/Internal/: Cont.hs  Dag.hs
test/: Test.hs
test/import/: haskell.txt
