name:                Dag
version:             0.0.1
synopsis:            Directed Acyclic Graph control framework
license:             BSD3
license-file:        LICENSE
author:              Scott Sadler
maintainer:          Scott Sadler <ssadler@mashi.org>
copyright:           Copyright (C) 2014 Scott Sadler
homepage:            http://github.com/ssadler/dag/
bug-reports:         http://github.com/ssadler/dag/issues
category:            Control
build-type:          Simple
cabal-version:       >= 1.8


library
  exposed-modules:   Control.Dag
  hs-source-dirs:    src
  build-depends:     base                   >= 3 && < 5,
                     containers             >= 0.1 && < 0.6,
                     transformers           == 0.4.1.0,
                     mtl                    == 2.2.1,
                     hashable               == 1.2.2.0,
                     lens                   == 4.4.0.2,
                     many                   == 0.1.0.2,
                     unix                   == 2.7.0.1,
                     process                == 1.2.0.0,
                     process                == 1.2.0.0,
                     -- aeson                  == 0.8.0.2,
                     hslogger               == 1.2.6,
                     template-haskell       == 2.9.0.0,
                     haskell-src-meta       == 0.6.0.8,
                     conduit                == 1.2.3,
                     conduit-extra          == 1.1.4.2,
                     bytestring             == 0.10.4.0,
                     cryptohash             == 0.11.6,
                     cryptohash-conduit     == 0.1.1,
                     resourcet              == 1.1.2.3
